# FinanceDatabase

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data.md  enhancement.md  feature_request.md
.github/python/: export_categories.py
.github/workflows/: categorization.yml  compression.yml  database_update.yml  gics_check.yml  identifier_validation.yml  json.yml  linting.yml  testing.yml
Database/: cryptos.csv  cryptos.xlsx  currencies.csv  currencies.xlsx  etfs.xlsx  indices.xlsx  moneymarkets.csv  moneymarkets.xlsx
Database/Categories/: cryptocurrencies_currencies.csv  cryptocurrencies_options.json  currencies_currencies.csv  currencies_options.json  equities_countries.csv  equities_countries.json  equities_industries.csv  equities_industries.json  equities_industry_groups.csv  equities_options.json  equities_sectors.csv  equities_sectors.json  etfs_category.csv  etfs_category_group.csv  etfs_family.csv  etfs_options.json  funds_category.csv  funds_category_group.csv  funds_family.csv  funds_options.json  indices_currencies.csv  moneymarkets_currencies.csv
Database/Cryptocurrencies/: AAVE.json  ABBC.json  ACH.json  ACT.json  ADA.json  ADK.json  ADX.json  AE.json  AEON.json  AIB.json  AION.json  ALGO.json  ALIAS.json  AMB.json  AMP1.json  ANKR.json  ANT.json  APL.json  AR.json  ARDR.json  ARK.json  ARRR.json  ATB.json  ATOM1.json  ATRI.json  AVA.json  AVAX.json  AXEL.json  AYA.json  BAND.json  BAT.json  BCA.json  BCD.json  BCH.json  BCN.json  BDX.json  BEAM.json  BEPRO.json  BHD.json  BHP.json  (+351 more)
Database/Currencies/: AED.json  AFN.json  ALL.json  AMD.json  ANG.json  AOA.json  ARS.json  AUD.json  AWG.json  AZN.json  BAM.json  BBD.json  BDT.json  BGN.json  BHD.json  BIF.json  BMD.json  BND.json  BOB.json  BRL.json  BRX.json  BSD.json  BTN.json  BWP.json  BYN.json  BZD.json  CAD.json  CAX.json  CDF.json  CHF.json  CLF.json  CLP.json  CNH.json  CNY.json  COP.json  CRC.json  CUC.json  CUP.json  CVE.json  CZK.json  (+135 more)
Database/ETFs/: Allocation--15% to 30% Equity.json  Allocation--30% to 50% Equity.json  Allocation--50% to 70% Equity.json  Allocation--70% to 85% Equity.json  Allocation--85%+ Equity.json  Bank Loan.json  Bear Market.json  China Region.json  Commodities Broad Basket.json  Communications.json  Consumer Cyclical.json  Consumer Defensive.json  Convertibles.json  Corporate Bond.json  Diversified Emerging Mkts.json  Diversified Pacific Asia.json  Emerging Markets Bond.json  Emerging-Markets Local-Currency Bond.json  Energy Limited Partnership.json  Equity Energy.json  Equity Precious Metals.json  Europe Stock.json  Financial.json  Foreign Large Blend.json  Foreign Large Growth.json  Foreign Large Value.json  Foreign Small Mid Blend.json  Foreign Small Mid Growth.json  Foreign Small Mid Value.json  Global Real Estate.json  Health.json  High Yield Bond.json  High Yield Muni.json  India Equity.json  Industrials.json  Inflation-Protected Bond.json  Infrastructure.json  Intermediate Government.json  Intermediate-Term Bond.json  Japan Stock.json  (+56 more)
Database/Equities/: Equities List.json
Database/Funds/: 2025 Target Date Portfolio.json  2030 Target Date Portfolio.json  2035 Target Date Portfolio.json  2035+ Target Date Portfolio.json  ASEAN Equity.json  Africa Equity.json  Aggressive Allocation.json  Allocation--15% to 30% Equity.json  Allocation--30% to 50% Equity.json  Allocation--50% to 70% Equity.json  Allocation--70% to 85% Equity.json  Allocation--85%+ Equity.json  Alt - Currency.json  Alt - Debt Arbitrage.json  Alt - Event Driven.json  Alt - Global Macro.json  Alt - Long Short Debt.json  Alt - Long Short Equity - Europe.json  Alt - Long Short Equity - Global.json  (+419 more)
Examples/: CountrySectorIndustryExample.py  FinanceDatabase.psd  Semiconductors_ETFs.py  Sillicon_Valley_Technology.py  Technical_Analysis_Biotech_Companies.py  ThePassiveInvestor.py  ThePassiveInvestor_ETF_Example_Tickers.xlsx  United_States_Airlines.py
Methodology/: README.md
Scripts/: crawl_vietnam_equities.py
Searcher/: __init__.py  json_options.py  json_picker.py
Tests/: Test Report.html  script.js  test_all_functions.py  test_all_json_files.py  test_local_urls.py  test_local_urls_specific.py  test_options.py  test_random_options.py  test_searches.py
compression/: README.md  compression.ipynb  cryptos.brotli  cryptos.bz2  cryptos.gzip  cryptos.pkl  currencies.brotli  currencies.bz2  currencies.gzip  currencies.pkl  etfs.brotli  etfs.bz2  etfs.gzip  etfs.pkl  funds.brotli  funds.bz2  funds.pkl  indices.brotli  indices.bz2  indices.gzip  indices.pkl  moneymarkets.brotli  moneymarkets.bz2  moneymarkets.gzip  moneymarkets.pkl
database/: cryptos.csv  currencies.csv  moneymarkets.csv
dev/: valueDict.py
examples/: CountrySectorIndustryExample.py  FInance Database - 1. Getting Started.ipynb  FInance Database - 2. Companies in the Netherlands.ipynb  FInance Database - 3. DuPont Analysis on Raildroad Companies.ipynb  FInance Database - 4. Technical Analysis of Biotech ETFs.ipynb  Sillicon_Valley_Technology.py  Technical_Analysis_Biotech_Companies.py  ThePassiveInvestor.py  ThePassiveInvestor_ETF_Example_Data.xlsx  United_States_Airlines.py
financedatabase/: Cryptos.py  Currencies.py  ETFs.py  Equities.py  Funds.py  Indices.py  Moneymarkets.py  README.md  __init__.py  cryptos.py  currencies.py  equities.py  etfs.py  examples.ipynb  funds.py  helpers.py  indices.py  json_options.py  json_picker.py  moneymarkets.py
parsers/: README.md  README_sec_enrichment_controller.md  category_controller.py  codes_controller.py  descriptions_controller.py  helpers.py  industry_controller.py  industry_group_controller.py  sec_enrichment_controller.py  sector_controller.py
scripts/: validate_identifiers.py
tests/: conftest.py  test_cryptos.py  test_currencies.py  test_equities.py  test_etfs.py  test_funds.py  test_indices.py  test_invariants.py  test_moneymarkets.py  test_options.py  test_sec_enrichment_controller.py  test_validate_identifiers.py
(+12228 files in other folders)
